samples/_failures_safe/1761518633_804f8f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_84b5f508.c:182:1: error: expected identifier or ‘(’ at end of input
  182 | int
      | ^~~
